--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
         <link rel = "stylesheet" href="./styles/style.css" />
         <title>Reset-The Basics</title>
     </head>
-    <body class="space-grotesk">
+    <body>
         <div class="nav-bar">
             <a href="/">Home</a>
             <a href="/">Project</a>
             <a href="/">Contact Us</a>
         </div>
         <div class="container">
-            <h2>Goal for March 2026</h3>
+            <h2>Goal for March 2026</h2>
             <p>This is the reset of my journey, to become something greater, by God's Grace. Amen!</p>
             <p>My strengths are:</p>
             <ol>
