New Projects added...

--- a/index.html
+++ b/index.html
@@ -1,38 +1,25 @@
 <!DOCTYPE html>
-    <html>
-    <head>
-        <!-- <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300..700&display=swap" rel="stylesheet"> -->
-        <link rel = "stylesheet" href="./styles/style.css" />
-        <title>Reset-The Basics</title>
-    </head>
-    <body>
-        <div class="nav-bar">
-            <a href="/">Home</a>
-            <a href="/">Project</a>
-            <a href="/">Contact Us</a>
-        </div>
-        <div class="container">
-            <h2>Goal for March 2026</h2>
-            <p>This is the reset of my journey, to become something greater, by God's Grace. Amen!</p>
-            <p>My strengths are:</p>
-            <ol>
-                <li>Designing</li> 
-                <li>Problem Solving</li>
-                <li>Leadership</li>
-            </ol>
-        </div>
-        <div class="card">
-            <img class = "image" src="./images/03.jpg" alt="Mojoyin Profile Pic
-            ">
-            <div>
-                <p>Mojoyinoluwa Sholotan</p>
-                <p>Game Developer</p>
-                <p>shomojoyin@gmail.com</p>
-                <button class="btn">Connect on LinkedIn</button>
-            </div>
-        </div>
-        </div>
-    </body>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="index.css" >
+  <title>Mini-Portfolio Build</title>
+</head>
+<body>
+  <section>
+    <h2>About</h2>
+    <p>Welcome to my frontend projects portfolio. Here you'll find a collection of web projects showcasing HTML, CSS, and JavaScript skills.</p>
+  </section>
+  
+  <nav>
+    <ul>
+      <li><a href="/intro-project/index.html">Intro-prohect</a></li>
+      <li><a href="/hometown-project/index.html">Hometown</a></li>
+      <li><a href="/basketball-scoreboard/index.html">Basketball Scoreboard</a></li>
+    </ul>
+  </nav>
+  
+  <a href="../index.html">Go to Parent Folder</a>
+</body>
 </html>
