Added links to main hatml

--- a/basketball-scoreboard/index.html
+++ b/basketball-scoreboard/index.html
@@ -7,8 +7,9 @@
   <title>Basketball Scorebord</title>
 </head>
 <body>
-  <div id="outline">
-  <div class="container">
+  <section id="outline">
+    <button><a href="../index.html">Back</a></button>
+  <section class="container">
     <div class="scores">
         <h3>HOME</h3>
         <p id="home-score">0</p>
@@ -23,9 +24,9 @@
         <button onclick="add2pointsguest()">+2</button>
         <button onclick="add3pointsguest()">+3</button>
     </div>
-  </div>
+  </section>
   <button id="btnNew" onclick="newgame()">New Game</button>
-  </div>
+  </section>
   <script src="script.js"></script>
 </body>
 </html>
