--- a/intro-project/index.html
+++ b/intro-project/index.html
@@ -8,12 +8,12 @@
         <title>Reset-The Basics</title>
     </head>
     <body>
-        <div class="nav-bar">
+        <section class="nav-bar">
             <a href="/">Home</a>
             <a href="/">Project</a>
             <a href="/">Contact Us</a>
-        </div>
-        <div class="container">
+        </section>
+        <section class="container">
             <h2>Goal for March 2026</h2>
             <p>This is the reset of my journey, to become something greater, by God's Grace. Amen!</p>
             <p>My strengths are:</p>
@@ -22,8 +22,8 @@
                 <li>Problem Solving</li>
                 <li>Leadership</li>
             </ol>
-        </div>
-        <div class="card">
+        </section>
+        <section class="card">
             <img class = "image" src="./images/03.jpg" alt="Mojoyin Profile Pic
             ">
             <div>
@@ -33,8 +33,7 @@
                 <button onclick="connect()" class="btn">Connect on LinkedIn</button>
                 <p id="linkedin-text">...</p>
             </div>
-        </div>
-        </div>
+        </section>
         <script src="index.js"></script>
     </body>
 </html>
