--- a/hometown-project/index.html
+++ b/hometown-project/index.html
@@ -10,11 +10,12 @@
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
-  <div class="hero">
+  <section class="hero">
+        <button><a href="../index.html">back</a></button>
     <h1 id="visit-text">Visit Ibadan</h1>
     <p id="welcome-text">The hometown of OG Yorubas. We breathe, eat and live the Yoruba Culture. Welcome to Ibadan.</p>
-  </div>
-  <div class="about">
+  </section>
+  <section class="about">
     <div>
       <img class="img-places" src="images/agodi1.jpg" alt="picture of Agodi garden, Ibadan"/>
       <h3>Go for a relaxing picnic in our local park</h3>
@@ -30,14 +31,14 @@
       <h3>Go to the best Amala Spot in the city</h3>
       <p>Amala Skye is the best place to visit for hot plate of abula.</p>
     </div>
-  </div>
-  <div class="card">
+  </section>
+  <section class="card">
     <div id="img-guide" alt="the tour guide"></div>
     <div id="about-guide">
       <h3>Your guide</h3>
       <p>I'm MJ and I live and breathe Ibadan. I know the best spot thanks to my dad</p>
       <p>Mojoyinoluwa Sholotan</p>
     </div>
-  </div>
+  </section>
 </body>
 </html>
