--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
   
   <nav>
     <ul>
-      <li><a href="/intro-project/index.html">Intro-prohect</a></li>
-      <li><a href="/hometown-project/index.html">Hometown</a></li>
-      <li><a href="/basketball-scoreboard/index.html">Basketball Scoreboard</a></li>
+      <li><a href="intro-project/index.html">Intro-prohect</a></li>
+      <li><a href="hometown-project/index.html">Hometown</a></li>
+      <li><a href="basketball-scoreboard/index.html">Basketball Scoreboard</a></li>
     </ul>
   </nav>
 </body>
