--- a/intro-project/index.html
+++ b/intro-project/index.html
@@ -22,6 +22,7 @@
                 <li>Problem Solving</li>
                 <li>Leadership</li>
             </ol>
+            <button><a href="../index.html">back</a></button>
         </section>
         <section class="card">
             <img class = "image" src="./images/03.jpg" alt="Mojoyin Profile Pic
